# deeplossless

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_ZH.md  ROADMAP.md  SECURITY.md  SKILL.md  agent_integration.md
.github/ISSUE_TEMPLATE/: agent-execution-report.md  bug_report.md  feature_request.md
.github/workflows/: rust.yml
.next/: trace  trace-build
bench/repos/misleading/: config.json
bench/repos/symbol/: main.py  user_service.py
bench/runner/: agent.py  metrics.py  tools.py
bench/tasks/: misleading.yaml  symbol.yaml
benches/: benchmarks.rs
benches/runner/: run.py
benches/runner/repos/config/: README.md  app.py  test_app.py
benches/runner/repos/misleading/: handler.py  router.py  test_router.py
benches/runner/repos/symbol/: README.md  test_users.py
benches/runner/runner/: agent.py  metrics.py
benches/runner/tasks/: config.yaml  deps.yaml  stale_cache.yaml
docs/: deeplossless.md  deeplossless.zh-CN.md  tech-reference.md
docs/architecture/: authority-boundary.md  dag-invariants.md  dependency-authority.md  dependency-model.md  frozen-invariants.md  replay-model.md  runtime-events.md  runtime-lifecycle.md
docs/superpowers/plans/: 2026-06-17-ds4-infrastructure-implementation.md
docs/superpowers/specs/: 2026-06-17-ds4-infrastructure-optimization-design.md  2026-06-17-ds4-prefix-stability.md
scenarios/: 01_fix_test_failure.claude_code.yaml  01_fix_test_failure.codex.yaml  01_fix_test_failure.yaml  02_add_feature.claude_code.yaml  02_add_feature.codex.yaml  02_add_feature.yaml  03_refactor_rename.claude_code.yaml  03_refactor_rename.codex.yaml  03_refactor_rename.yaml  04_search_to_fix.claude_code.yaml  04_search_to_fix.codex.yaml  04_search_to_fix.yaml  05_multi_file_edit.claude_code.yaml  05_multi_file_edit.codex.yaml  05_multi_file_edit.yaml  06_debug_from_logs.claude_code.yaml  06_debug_from_logs.codex.yaml  06_debug_from_logs.yaml  07_security_fix.claude_code.yaml  07_security_fix.codex.yaml  07_security_fix.yaml  hidden_bug.claude_code.yaml  hidden_bug.codex.yaml  hidden_bug.yaml  reuse_existing.yaml
src/: artifacts.rs  assistant_validation.rs  audit.rs  compactor.rs  context_pack.rs  dag.rs  db.rs  dependency_kind.rs  dependency_view.rs  diff_events.rs  embeddings.rs  event_store.rs  execution.rs  file_observation.rs  lib.rs  main.rs  metrics.rs  model_error.rs  motif.rs  mutation.rs  parallel.rs  pipeline.rs  prefix_stability.rs  provider.rs  proxy.rs  replay.rs  response_store.rs  responses_stream.rs  runtime.rs  runtime_coordinator.rs  runtime_events.rs  runtime_invariants.rs  runtime_state_view.rs  session.rs  session_store.rs  snapshot.rs  snippet.rs  summarizer.rs  think_tag.rs  tokenizer.rs  (+1 more)
src/protocol/: anthropic.rs  canonical.rs  chat_completions.rs  dsml.rs  mod.rs  responses.rs  streaming.rs
src/torture/: aces.rs  adversarial.rs  driver.rs  metrics.rs  mod.rs  runner.rs  scenario.rs  score.rs  tests.rs  trace.rs
tests/: long_session_benchmark.rs  perf_benchmark.rs  proxy_integration.rs  runtime_event_soak.rs  simulated_session.rs
traces/: template.json  torture.json
