[package]
name = "deeplossless"
version = "0.1.0"
edition = "2026"
description = "Lossless Context Management proxy for DeepSeek — DAG-based conversation summarization with zero-loss SQLite persistence"

[dependencies]
# HTTP proxy
axum = "0.8"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
shellexpand = "3"

